# smol-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  xmake.lua
android-template/: AndroidManifest.xml
android-template/res/values/: strings.xml
assets/shaders/: culling.slang  imgui.slang  lighting.slang  shader_interface.slang  smol_globals.slang  tonemap.slang  util.slang
cmake/: policies.cmake  toolchain-linux-clang.cmake  toolchain-macos-clang.cmake  toolchain-windows-clang.cmake
include/SDL3/: SDL_revision.h
include/imgui/: imconfig.h
include/slang/: slang-tag-version.h
lib/linux/: libc++.so.1.0  libc++abi.so.1.0  libunwind.so.1.0
lib/stb/: stb_image_resize2.cpp
lib/vma/: vk_mem_alloc.cpp
lib/vulkan/linux/: libvulkan.so.1
scripts/: apply_formatting.sh  smol
src/: color.h  defines.h  engine.h  log.h  math_util.h  physics.cpp  physics.h  time_util.cpp  util.cpp
src/asset/: asset.h  mesh.cpp  mesh.h  shader.cpp  shader.h
src/components/: box_collider.cpp  camera.cpp  camera.h  capsule_collider.cpp  mesh_renderer.cpp  point_light.h  rigidbody.h  test_component.cpp  test_component.h  transform.cpp  transform.h
src/core/: component.h  level.cpp
src/engine/: audio_player.cpp  audio_player.h  engine.cpp  events.cpp  events.h  log.cpp  main_thread.cpp  main_thread.h  math_util.h  time_util.h  util.h
src/engine/asset/: asset_manager.h  mesh.cpp  texture.cpp  texture.h
src/engine/components/: box_collider.cpp  box_collider.h  camera.cpp  capsule_collider.h  collider.cpp  collider.h  mesh_renderer.h  renderer_component.cpp  renderer_component.h  rigidbody.cpp  transform.cpp
src/engine/core/: gameobject.cpp  gameobject.h  level.h
src/engine/rendering/: material.cpp  material.h  renderer.cpp
src/rendering/: renderer.cpp  renderer.h  spatial_material.cpp  spatial_material.h
src/smol/: asset.cpp  asset.h  asset_fwd.h  asset_handle.h  asset_loader.h  asset_meta.cpp  asset_meta.h  asset_pool.h  asset_registry.cpp  asset_registry.h  asset_serde.cpp  asset_serde.h  asset_types.h  color.cpp  color.h  defines.h  ecs.cpp  ecs.h  ecs_fwd.h  ecs_types.h  engine.cpp  engine.h  events.cpp  events.h  game.h  hash.h  input.cpp  input.h  jobs.cpp  jobs.h  log.cpp  log.h  main.cpp  math.h  math_util.h  os.cpp  os.h  physics.cpp  physics.h  profiling.h  (+17 more)
src/smol-bin/: main.cpp
src/smol-cooker/: cache_manager.cpp  cache_manager.h  main.cpp  material_cooker.cpp  material_cooker.h  mesh_cooker.cpp  mesh_cooker.h  scene_cooker.cpp  scene_cooker.h  shader_compiler.cpp  shader_compiler.h  shader_cooker.cpp  shader_cooker.h  texture_cooker.cpp  texture_cooker.h  xxhash.h
src/smol-editor/: editor_context.h  imgui_backend.cpp  imgui_backend.h  main.cpp  project_manager.cpp  project_manager.h
src/smol-editor/panels/: hierarchy.cpp  hierarchy.h  inspector.cpp  inspector.h  main_menu_bar.cpp  main_menu_bar.h  toolbar.cpp  toolbar.h  viewport.cpp  viewport.h
src/smol-editor/systems/: camera.cpp  camera.h
src/smol-runtime/: empty_game.cpp  main.cpp
src/smol/asset/: asset.h  asset_manager.cpp  asset_manager.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/smol/assets/: material.cpp  material.h  material_format.h  mesh.cpp  mesh.h  mesh_format.h  scene.cpp  scene.h  scene_format.h  shader.cpp  shader.h  shader_format.h  texture.cpp  texture.h
src/smol/components/: box_collider.h  camera.cpp  camera.h  capsule_collider.h  collider.cpp  collider.h  lighting.h  mesh_renderer.cpp  mesh_renderer.h  physics.h  renderer.cpp  renderer.h  renderer_component.cpp  renderer_component.h  rigidbody.cpp  rigidbody.h  tag.h  transform.cpp  transform.h
src/smol/containers/: flat_map.h
src/smol/core/: component.cpp  component.h  gameobject.cpp  gameobject.h  level.cpp  level.h
src/smol/memory/: arena_function.h  linear_allocator.cpp  linear_allocator.h
src/smol/physics/: jolt_job_system_int.cpp  jolt_job_system_int.h  physics_sync.h  physics_world.cpp  physics_world.h
src/smol/rendering/: graphics_state.h  imgui_backend.cpp  imgui_backend.h  material.cpp  material.h  renderer.cpp  renderer.h  renderer_constants.h  renderer_resources.cpp  renderer_resources.h  renderer_types.cpp  renderer_types.h  rendergraph.cpp  rendergraph.h  samplers.h  shader_compiler.cpp  shader_compiler.h  shader_instance.cpp  shader_instance.h  spatial_material.cpp  spatial_material.h  ubo.cpp  ubo.h  util.h  vulkan.cpp  vulkan.h
src/smol/systems/: camera.cpp  camera.h  events.cpp  events.h  shadows.cpp  shadows.h  transform.cpp  transform.h
template/: ${NAME}.smolproject  .gitignore  xmake.lua
template/src/: smol_game.cpp
xmake/modules/: android_toolchain.lua  smol_project.lua
xmake/rules/: android-apk.lua  assets.lua  common.lua  game.lua  hotreload.lua
xmake/tasks/: android_setup.lua  package.lua
